Fixed the problem that authentication was not working properly.
